# wham

./: CMakeLists.txt  README.md
LMX-1.0/: AUTHORS  ChangeLog.txt  README
LMX-1.0/src/: Makefile
LMX-1.0/src/LMX/: Makefile  lmx_base_stopwatch.h  lmx_diff_configuration.h  lmx_diff_integrator_am.h  lmx_diff_problem.h  lmx_diff_problem_double.h  lmx_diff_problem_first.h  lmx_except.h  lmx_mat_type_csc.h  lmx_nlsolvers.h
LMX-1.0/tests/: Makefile
LMX-1.0/tests/gmm/: Makefile
LMX-1.0/tests/lapack/: Makefile
gmm/gmm-3.0/include/gmm/: gmm_inoutput.h
libmknix/: CMakeLists.txt  analysis.cpp  analysis.h  analysisthermaldynamic.cpp  analysisthermaldynamic.h  body.cpp  body.h  bodyflex.cpp  bodyflex.h  bodyflexglobalgalerkin.cpp  bodyflexglobalgalerkin.h  cell.cpp  cell.h  celltriang.cpp  celltriang.h  common.cpp  common.h  dictionary.h  elemtriangle.cpp  elemtriangle.h  gausspoint.cpp  gausspoint.h  gausspoint2D.cpp  gausspoint2D.h  loadthermal.cpp  loadthermal.h  material.cpp  material.h  node.cpp  node.h  point.cpp  point.h  reader.cpp  reader.h  readerflex.cpp  readerflex.h  shapefunction.cpp  shapefunctiontriangle.cpp  shapefunctiontriangle.h  simulation.cpp  (+3 more)
models_certified/tile6_104/: input.txt  mesh_104.txt  thermalcapacity.txt  thermalconductivity.txt
src/: .directory  CMakeLists.txt  mknix.cpp  wham-files.cpp  wham.cpp
